# computer-vision-hand-gesture-controller

./: CMakeLists.txt  README.md  gesture_sender.py  main.cpp
